<?xml version="1.0" encoding="utf-8"?>
<!--
  ~     Copyright 2018 Jonathan Merritt 11R00TT00R11@GMAIL.COM
  ~
  ~     Licensed under the Apache License, Version 2.0 (the "License");
  ~     you may not use this file except in compliance with the License.
  ~     You may obtain a copy of the License at
  ~
  ~        http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~     Unless required by applicable law or agreed to in writing, software
  ~     distributed under the License is distributed on an "AS IS" BASIS,
  ~     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~     See the License for the specific language governing permissions and
  ~     limitations under the License.
  -->

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

  <androidx.constraintlayout.widget.ConstraintLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      >

    <Button
        android:id="@+id/getLocals"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/get_locales"
        app:layout_constraintBottom_toTopOf="@+id/open"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        style="@style/Button"
        />

    <Button
        android:id="@+id/open"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/open"
        app:layout_constraintBottom_toTopOf="@+id/openTypeface"
        app:layout_constraintEnd_toStartOf="@+id/openPair"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/getLocals"
        style="@style/Button"
        />

    <Button
        android:id="@+id/openPair"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/open_pair"
        app:layout_constraintBottom_toBottomOf="@+id/open"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/open"
        app:layout_constraintTop_toTopOf="@+id/open"
        style="@style/Button"
        />

    <Button
        android:id="@+id/openTypeface"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/open_typeface"
        app:layout_constraintBottom_toTopOf="@+id/openFd"
        app:layout_constraintEnd_toStartOf="@+id/openTypefacePair"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/open"
        style="@style/Button"
        />

    <Button
        android:id="@+id/openTypefacePair"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/open_typeface_pair"
        app:layout_constraintBottom_toBottomOf="@+id/openTypeface"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/openTypeface"
        app:layout_constraintTop_toTopOf="@+id/openTypeface"
        style="@style/Button"
        />

    <Button
        android:id="@+id/openFd"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/open_fd"
        app:layout_constraintBottom_toTopOf="@+id/list"
        app:layout_constraintEnd_toStartOf="@+id/openFdPair"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/openTypeface"
        style="@style/Button"
        />

    <Button
        android:id="@+id/openFdPair"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/open_fd_pair"
        app:layout_constraintBottom_toBottomOf="@+id/openFd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/openFd"
        app:layout_constraintTop_toTopOf="@+id/openFd"
        style="@style/Button"
        />

    <Button
        android:id="@+id/list"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/list"
        app:layout_constraintBottom_toTopOf="@+id/openNonAssetFd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/openFd"
        style="@style/Button"
        />

    <Button
        android:id="@+id/openNonAssetFd"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/open_non_asset_fd"
        app:layout_constraintBottom_toTopOf="@+id/openXmlResParser"
        app:layout_constraintEnd_toStartOf="@+id/openNonAssetFdPair"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/list"
        style="@style/Button"
        />

    <Button
        android:id="@+id/openNonAssetFdPair"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/open_non_asset_fd_pair"
        app:layout_constraintBottom_toBottomOf="@+id/openNonAssetFd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/openNonAssetFd"
        app:layout_constraintTop_toTopOf="@+id/openNonAssetFd"
        style="@style/Button"
        />

    <Button
        android:id="@+id/openXmlResParser"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/open_xml_resource_parser"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/openXmlResParserPair"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/openNonAssetFd"
        style="@style/Button"
        />

    <Button
        android:id="@+id/openXmlResParserPair"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/open_xml_resource_parser_pair"
        app:layout_constraintBottom_toBottomOf="@+id/openXmlResParser"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/openXmlResParser"
        app:layout_constraintTop_toTopOf="@+id/openXmlResParser"
        style="@style/Button"
        />

  </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>